update host and basepath

--- a/gene_sharpener_api.yml
+++ b/gene_sharpener_api.yml
@@ -1,10 +1,10 @@
 swagger: '2.0'
 info:
   title: Sharpener API
-  version: 1.1.0
+  version: 1.1.1
 
-host: indigo.ncats.io
-basePath: /sharpener
+host: sharpener.ncats.io
+basePath: /api
 schemes:
 - "https"
 
